--- a/Script/Report.Rmd
+++ b/Script/Report.Rmd
@@ -515,6 +515,15 @@ This subgroup comparison reveals a clear gradient: higher spending is associated
 
 ## Event Analysis
 
+Applying the findings related to the correlation between government healthcare spending per capita and national vaccination coverage rates worldwide, we can analyse a critical event period from 2010 to 2014 where there were numerous transformative developments in global health administration.
+
+From 2011 to 2015 the thrid strategic phase of the Global Alliance for Vaccines and Immunization flourished. This measure introduced market-based incentives which altered vaccine pricing and availability structures. (source https://www.gavi.org/our-alliance/strategy/phase-3-2011-2015)
+
+The WHO's launch of the Decade of Vaccines (2011-2020) during the aforementioned period established exciting targets and standardized frameworks focused on increasing data collection and policy coordination amongs different regions.(sourcehttps://iris.who.int/handle/10665/78141)
+
+
+
+
 
 ### Interpetation and Relevance
 
