--- a/Script/Report.Rmd
+++ b/Script/Report.Rmd
@@ -521,13 +521,18 @@ During COVID-19 routine immunizations were suspended or decreased as worldwide h
 
 Due to global lockdowns and border restrictions another major disruption was on the supply chain, as the struggle to transport vaccinations across borders and maintain cold storage systems increased, leading to decreased vaccination availability. Increasingly relevant to this study, a decrease in 7.7% DTP3 vaccine coverage worldwide was recognized compared to expected doses delivered in the absence of COVID. (source https://www.thelancet.com/article/S0140-6736%2821%2901337-4/fulltext)
 
-The child deaths per spending data ( 
+The child deaths per spending data reveals a steady improvement trajectory up until before COVID-19 where regions started to show signs of stagnation. African regions kept stable child deaths per spending through the pandemic which suggests this region had resilience strategies such as communtiy health worker programs which focused on under-five care while more formal systems were focused on COVID related health issues. Regardless of staffing shortages and movement restriction, these pre-established networks prevented many childrens' deaths in this region. (source https://pubmed.ncbi.nlm.nih.gov/38963883/) This data might however have overstated results as it may reflect COVID-19 related deaths and healthcare access disruptions which caused an increased number of infant mortality, complciating the interepretation of spending efficiency across this time period.
+
+The global coverage map strucks with regional disparities during the 2020-2022 period, ranging from 60% to close to 100% in some WHO regions. This suggests that pre-existing health care systems' resilience and adaptive mechanisms worldwide varied greatly upon facing the pandemic. Whereas most childhood vaccines declined in coverage worldwide, it was more prominent in low and lower-middle income countries (source https://pmc.ncbi.nlm.nih.gov/articles/PMC10249397/?) , which reinstates that more developed countries with better precautionary health systems can keep a more stable vaccination coverage even during more strenuous moments on the healthcare system.
+
+Similarly the comparison between subpopulations shows how bottom performing regions, namely africa, maintained a 82% coverage during the pandemic while top performing regions achieved 91%. This data aligns with the previous graph, showing that stronger health systems in Europe can much better mitigate coverage maintenance challenges compared to African regions. 
+
+Finally, the dollar per coverage point data shows a sudden spike in costs, which suggests that it became much more expensive to maintain coverage during the pandemic. The aforementioned supply chain disruption provides an explanation to this spike. Service suspensions and supply-chain delays caused vaccination volumes to drop, meaning that the delivery costs such as personnel and cold chains had to be spread over fewer doses, signficantly increasing the per-point cost. 
 
 
+### Interpretation and Relevance
 
-### Interpetation and Relevance
-
----
+Over the course of the analysis of the relation between all four graphs and COVID-19, strong temporal evidence has come to light, hinting a pandemic-related causation rather than coincidental trends. This challenges theories which assume stable and linear relationships between government healthcare spending and vaccination coverages
 
 # Discussion
 
