--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -181,7 +181,7 @@ These limitations mean that while the analysis can reveal correlations, it canno
 
 WHO DTP Vaccination Coverage:
 
--   Antigen: DTP3
+-   Antigen: DTP 1 and DTP3
 
 -   Coverage: vaccinated target population
 
