--- a/Script/Report.Rmd
+++ b/Script/Report.Rmd
@@ -208,61 +208,15 @@ To prepare the datasets for analysis, we performed several cleaning steps to ens
 
 ### Health Spending Data
 
-We began by selecting the relevant columns from the raw health spending dataset and renaming them for clarity. We also ensured that the `Year` and `Spending` columns were numeric to support time-based analysis:
-
-```{r}
-cleaned_healthspending_data <- raw_healthspending_data %>%
-  select(Region = Location, Year = Period, Spending = Value) %>%
-  mutate(
-    Year = as.numeric(Year),
-    Spending = as.numeric(Spending)
-  )
-```
-
-This step was essential to align the data with the DTP vaccination dataset, which also uses `Region` and `Year` as key identifiers.
+We began by selecting the relevant columns from the raw health spending dataset and renaming them for clarity. We also ensured that the `Year` and `Spending` columns were numeric to support time-based analysis. This step was essential to align the data with the DTP vaccination dataset, which also uses `Region` and `Year` as key identifiers.
 
 ### DTP Vaccination Coverage Data
 
-Next, we filtered the immunization dataset to include only WHO regions and WUENIC estimates, which are considered the most reliable. We also created a new variable, `PeriodGroup`, to group years into meaningful intervals for trend analysis:
-
-```{r}
-cleaned_dtpdata <- df %>%
-  filter(
-    COVERAGE_CATEGORY == "WUENIC",
-    GROUP == "WHO_REGIONS"
-  ) %>%
-  select(Region = NAME, Year = YEAR, Coverage = COVERAGE) %>%
-  mutate(
-    Year = as.numeric(Year),
-    Coverage = as.numeric(Coverage),
-    PeriodGroup = case_when(
-      Year >= 2000 & Year <= 2004 ~ "2000–2004",
-      Year >= 2005 & Year <= 2009 ~ "2005–2009",
-      Year >= 2010 & Year <= 2014 ~ "2010–2014",
-      Year >= 2015 & Year <= 2019 ~ "2015–2019",
-      Year >= 2020 & Year <= 2022 ~ "2020–2022"
-    )
-  )
-```
-
-This transformation allows us to analyze changes in vaccination coverage over time in a more interpretable way.
+Next, we filtered the immunization dataset to include only WHO regions and WUENIC estimates, which are considered the most reliable. We also created a new variable, `PeriodGroup`, to group years into meaningful intervals for trend analysis. This transformation allows us to analyze changes in vaccination coverage over time in a more interpretable way.
 
 ### Child Mortality Data
 
-We also prepared the child mortality dataset by selecting and renaming relevant columns, and converting values to numeric types:
-
-```{r}
-childdeath_selected <- raw_childdeath_data %>%
-  select(Region = Location, Year = Period, Deaths = FactValueNumeric)
-
-childdeath_typed <- childdeath_selected %>%
-  mutate(
-    Year = as.numeric(Year),
-    Deaths = as.numeric(Deaths)
-  )
-```
-
-This ensures that the dataset can be merged with the others on `Region` and `Year`.
+We also prepared the child mortality dataset by selecting and renaming relevant columns, and converting values to numeric types. This ensures that the dataset can be merged with the others on `Region` and `Year`.
 
 
 ### Error Handling and Fixes
@@ -280,32 +234,7 @@ To analyze trends over time, we created a **period variable** for each dataset t
 
 ### Health Spending
 
-We created a new variable `Period` in the health spending dataset using `mutate()` and `case_when()`:
-
-```{r}
-healthspending_with_period <- cleaned_healthspending_data %>%
-  mutate(Period = case_when(
-    Year >= 2000 & Year <= 2004 ~ "2000–2004",
-    Year >= 2005 & Year <= 2009 ~ "2005–2009",
-    Year >= 2010 & Year <= 2014 ~ "2010–2014",
-    Year >= 2015 & Year <= 2019 ~ "2015–2019",
-    Year >= 2020 & Year <= 2022 ~ "2020–2022",
-    TRUE ~ NA_character_
-  ))
-```
-
-We then calculated the **average health spending** per region and period:
-
-```{r}
-avg_healthspending_by_period <- healthspending_with_period %>% 
-  filter(!is.na(Period)) %>%
-  group_by(Region, Period) %>%
-  summarise(
-    AvgSpending = mean(Spending, na.rm = TRUE),
-    .groups = "drop"
-  )
-```
-
+We created a new variable `Period` in the health spending dataset using `mutate()` and `case_when()`. We then calculated the **average health spending** per region and period.
 
 - **Variables used**: `Spending`, `Region`, `Period`  
 - **Purpose**: Calculates average health spending per region and period.  
@@ -314,18 +243,7 @@ avg_healthspending_by_period <- healthspending_with_period %>%
 
 ### DTP Vaccination Coverage
 
-For the DTP dataset, we used an existing variable `PeriodGroup` (created earlier) and calculated the **average vaccination coverage** per region and period:
-
-```{r}
-DTPcoverage <- cleaned_dtpdata %>%
-  filter(!is.na(PeriodGroup)) %>%
-  group_by(Region, PeriodGroup) %>%
-  summarise(
-    AvgCoverage = mean(Coverage, na.rm = TRUE),
-    .groups = "drop"
-  ) %>%
-  arrange(Region)
-```
+For the DTP dataset, we used an existing variable `PeriodGroup` (created earlier) and calculated the **average vaccination coverage** per region and period.
 
 - **Variables used**: `Coverage`, `Region`, `PeriodGroup`  
 - **Purpose**: Computes average DTP vaccine coverage per region and period.  
@@ -334,37 +252,12 @@ DTPcoverage <- cleaned_dtpdata %>%
 
 ### Child Mortality
 
-We also created a `Period` variable for the child mortality dataset:
-
-```{r}
-childdeath_with_period <- childdeath_typed %>%
-  mutate(Period = case_when(
-    Year >= 2000 & Year <= 2004 ~ "2000–2004",
-    Year >= 2005 & Year <= 2009 ~ "2005–2009",
-    Year >= 2010 & Year <= 2014 ~ "2010–2014",
-    Year >= 2015 & Year <= 2019 ~ "2015–2019",
-    Year >= 2020 & Year <= 2022 ~ "2020–2022",
-    TRUE ~ NA_character_
-  ))
-```
-
-We then summarized the **average number of child deaths** per region and period:
-
-```{r}
-avg_childdeath_by_period <- childdeath_with_period %>%
-  filter(!is.na(Period)) %>%
-  group_by(Region, Period) %>%
-  summarise(
-    AvgChildDeath = mean(Deaths, na.rm = TRUE),
-    .groups = "drop"
-  )
-```
+We also created a `Period` variable for the child mortality dataset. We then summarized the **average number of child deaths** per region and period:
 
 - **Variables used**: `Deaths`, `Region`, `Period`  
 - **Purpose**: Calculates average child deaths per region and period.  
 - **Usefulness**: Measures health outcomes and can be linked to spending and coverage.  
 - **Intended analysis**: Identify regions with high or declining child mortality and explore correlations.
-
 
 These variables allow us to compare trends in health spending, vaccination coverage, and child mortality across WHO regions and over time.
 
@@ -395,7 +288,7 @@ merged_health_data <- avg_healthspending_by_period %>% inner_join(DTPcoverage, b
 ```
 
 Creating New Variables
-To enrich the analysis, I constructed new variables that express relationships between the indicators:
+To enrich the analysis, we constructed new variables that express relationships between the indicators:
 
 ```{r} 
 merged_health_data <- merged_health_data %>%
